# CMakeWithCUDA

demo1/: addWithCuda.cu  addWithCuda.cuh  main.cpp
demo2/: CMakeLists.txt  main.cpp  vector_operations.cu  vector_operations.h
demo3/: KernelSupport.cu  KernelSupport_all.cu  MyKernel.cu  MyKernel.h  a.exp
shared_lib_demo/: add.cuh  maingpu.cpp  readme.txt
shared_lib_demo_cmake/: CMakeLists.txt  add.cu  add.cuh
static_lib_demo_cmake/: CMakeLists.txt  add.cuh  maingpu.cpp
